--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
@@ -42,6 +42,16 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ccs.agenda.activity.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.ccs.agenda.activity.UpdateActivity"
+            android:label="@string/title_activity_update"
+            android:parentActivityName="com.ccs.agenda.activity.DetailActivity"
+            android:windowSoftInputMode="stateHidden"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.ccs.agenda.activity.DetailActivity" />
         </activity>
 
     </application>
